check for missing/wrong settings

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -1,10 +1,43 @@
-@SigmaDimensions:HAS[#orbitalPeriod[>0]]
+// Check for missing variables
+
+@SigmaDimensions:HAS[~Rescale[<1],~Rescale[>1]]:AFTER[SigDim]
+{
+	%Rescale = 1
+}
+@SigmaDimensions:HAS[~Resize[<1],~Resize[>1]]:AFTER[SigDim]
+{
+	%Resize = 1
+}
+@SigmaDimensions:HAS[~Atmosphere[<1],~Atmosphere[>1]]:AFTER[SigDim]
+{
+	%Atmosphere = 1
+}
+@SigmaDimensions:HAS[~dayLengthMultiplier[<1],~dayLengthMultiplier[>1]]:AFTER[SigDim]
+{
+	%dayLengthMultiplier = 1
+}
+@SigmaDimensions:HAS[~geeASLmultiplier[<1],~geeASLmultiplier[>1]]:AFTER[SigDim]
+{
+	%geeASLmultiplier = 1
+}
+@SigmaDimensions:HAS[~SoIsFromRadius[0],~SoIsFromRadius[1]]:AFTER[SigDim]
+{
+	%SoIsFromRadius = 0
+}
+@SigmaDimensions:HAS[~RingsFromRadius[0],~RingsFromRadius[1]]:AFTER[SigDim]
+{
+	%RingsFromRadius = 0
+}
+
+// Apply changes needed for advanced settings
+
+@SigmaDimensions:HAS[#orbitalPeriod[>0]]:AFTER[SigDim]
 {
 	%Rescale = #$orbitalPeriod$
 	@Rescale *= #$Resize$
 	@Rescale != 0.666666666666667
 }
-@SigmaDimensions:HAS[#daysVSyearRatio[>0]]
+@SigmaDimensions:HAS[#daysVSyearRatio[>0]]:AFTER[SigDim]
 {
 	%dayLengthMultiplier = #$Rescale$
 	@dayLengthMultiplier != 0.5
@@ -12,24 +45,24 @@
 	@dayLengthMultiplier *= #$daysVSyearRatio$
 	@dayLengthMultiplier /= #$Resize$
 }
-@SigmaDimensions:HAS[#SoIsFromRadius[1]]
+@SigmaDimensions:HAS[#SoIsFromRadius[1]]:AFTER[SigDim]
 {
 	%SoIsFromRadius = #$Resize$
 }
-@SigmaDimensions:HAS[#SoIsFromRadius[0]]
+@SigmaDimensions:HAS[#SoIsFromRadius[0]]:AFTER[SigDim]
 {
 	%SoIsFromRadius = #$Rescale$
 }
-@SigmaDimensions:HAS[#RingsFromRadius[0]]
+@SigmaDimensions:HAS[#RingsFromRadius[0]]:AFTER[SigDim]
 {
 	%RingsFromRadius = #$Rescale$
 	@RingsFromRadius /= #$Resize$
 }
-@SigmaDimensions
+@SigmaDimensions:AFTER[SigDim]
 {
 	%fadeResize = 1
 }
-@SigmaDimensions:HAS[#Resize[>1]]
+@SigmaDimensions:HAS[#Resize[>1]]:AFTER[SigDim]
 {
 	%fadeResize = #$Resize$
 }
