--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -9,8 +9,10 @@
 			@atmosphereDepth *= #$@SigmaDimensions/Atmosphere$
 			@AtmosphereFromGround
 			{
-				@innerRadius *= #$@SigmaDimensions/Atmosphere$
+				@outerRadius -= #$innerRadius$
 				@outerRadius *= #$@SigmaDimensions/Atmosphere$
+				@innerRadius *= #$@SigmaDimensions/Resize$
+				@outerRadius += #$innerRadius$
 			}
 		
 			// pressureCurve
