default deformation and jitterheight for VoronoiCraters

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -94,6 +94,14 @@
 				{
 					@offset *= #$@SigmaDimensions/Resize$
 				}
+				@VoronoiCraters:HAS[~deformation[*]]
+				{
+					deformation = 500
+				}
+				@VoronoiCraters:HAS[~jitterHeight[*]]
+				{
+					jitterHeight = 3
+				}
 				@VoronoiCraters,*
 				{
 					@deformation *= #$@SigmaDimensions/Resize$
