--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -13,6 +13,20 @@
 				@outerRadius *= #$@SigmaDimensions/Atmosphere$
 				@innerRadius *= #$@SigmaDimensions/Resize$
 				@outerRadius += #$innerRadius$
+				%transformScale = #$outerRadius$,$outerRadius$,$outerRadius$
+				@transformScale[*] /= #$../../Properties/radius$
+				@transformScale[*] /= #$@SigmaDimensions/Resize$
+				%scaleFix = 1
+				@scaleFix -= #$@SigmaDimensions/Resize$
+			}
+			@AtmosphereFromGround:HAS[#scaleFix[>0]]
+			{
+				@scaleFix *= 1.2
+				@transformScale[*] *= #$scaleFix$
+			}
+			@AtmosphereFromGround
+			{
+				!scaleFix = DEL
 			}
 		
 			// pressureCurve
