--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -13,20 +13,23 @@
 				@outerRadius *= #$@SigmaDimensions/Atmosphere$
 				@innerRadius *= #$@SigmaDimensions/Resize$
 				@outerRadius += #$innerRadius$
-				%transformScale = #$outerRadius$,$outerRadius$,$outerRadius$
-				@transformScale[*] /= #$../../Properties/radius$
-				@transformScale[*] /= #$@SigmaDimensions/Resize$
-				%scaleFix = 1
-				@scaleFix -= #$@SigmaDimensions/Resize$
+				%transformScale = #$outerRadius$
+				@transformScale -= #$innerRadius$
+				check1 = #$transformScale$
 			}
-			@AtmosphereFromGround:HAS[#scaleFix[>0]]
+			@AtmosphereFromGround:HAS[#transformScale[<6000]]
 			{
-				@scaleFix *= 1.2
-				@transformScale[*] *= #$scaleFix$
+				@transformScale = 6000
+				check2 = #$transformScale$
 			}
 			@AtmosphereFromGround
 			{
-				!scaleFix = DEL
+				@transformScale += #$innerRadius$
+				@transformScale = #$transformScale$,$transformScale$,$transformScale$
+				@transformScale[*] /= #$../../Properties/radius$
+				check3 = #$transformScale$
+				@transformScale[*] /= #$@SigmaDimensions/Resize$
+				check4 = #$transformScale$
 			}
 		
 			// pressureCurve
