science altitudes fix

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -4,6 +4,13 @@
 	{
 		@Properties
 		{
+			@ScienceValues
+			{
+				@spaceAltitudeThreshold += #$../radius$
+			}
+		}
+		@Properties
+		{
 			@radius *= #$@SigmaDimensions/Resize$
 			@mass *= #$@SigmaDimensions/Resize$
 			@mass *= #$@SigmaDimensions/Resize$
@@ -14,8 +21,9 @@
 			@timewarpAltitudeLimits,0[*, ] *= #$@SigmaDimensions/Resize$
 			@ScienceValues
 			{
-				@flyingAltitudeThreshold *= #$@SigmaDimensions/Resize$
+				@flyingAltitudeThreshold *= #$@SigmaDimensions/Atmosphere$
 				@spaceAltitudeThreshold *= #$@SigmaDimensions/Rescale$
+				@spaceAltitudeThreshold -= #$../radius$
 			}
 		}
 		@Orbit
