--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -1,5 +1,19 @@
 @Kopernicus:AFTER[SigDim]
 {
+	@Body:HAS[@Atmosphere]
+	{
+		@Properties
+		{
+			@timewarpAltitudeLimits,0[*, ] *= #$@SigmaDimensions/Atmosphere$
+		}
+	}
+	@Body:HAS[!Atmosphere]
+	{
+		@Properties
+		{
+			@timewarpAltitudeLimits,0[*, ] *= #$@SigmaDimensions/Resize$
+		}
+	}
 	@Body,*
 	{
 		@Properties
@@ -18,7 +32,6 @@
 			@rotationPeriod *= #$@SigmaDimensions/dayLengthMultiplier$
 			@inverseRotThresholdAltitude *= #$@SigmaDimensions/Resize$
 			@sphereOfInfluence *= #$@SigmaDimensions/SoIsFromRadius$
-			@timewarpAltitudeLimits,0[*, ] *= #$@SigmaDimensions/Resize$
 			@ScienceValues
 			{
 				@flyingAltitudeThreshold *= #$@SigmaDimensions/Atmosphere$
