--- a/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Duna.cfg
@@ -35,27 +35,40 @@
 					deformity = 500
 					SigmaDimensions = 1
 				}
-				VertexHeightNoiseVertHeightCurve2 {}
-				VertexHeightNoiseVertHeightCurve2 {}
-				VertexHeightNoiseVertHeightCurve2 {}
+				VertexHeightNoiseVertHeightCurve2
+				{
+					sigmaPlaceholder = 1
+				}
+				VertexHeightNoiseVertHeightCurve2
+				{
+					sigmaPlaceholder = 1
+				}
+				VertexHeightNoiseVertHeightCurve2
+				{
+					sigmaPlaceholder = 1
+				}
 				@VertexHeightNoiseVertHeightCurve2,0
 				{
 					deformity = 1000
 					simplexHeightEnd = 6500
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@VertexHeightNoiseVertHeightCurve2,1
 				{
 					deformity = 1000
 					simplexHeightEnd = 7500
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@VertexHeightNoiseVertHeightCurve2,2
 				{
 					deformity = 2000
 					simplexHeightEnd = 8500
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
+				!VertexHeightNoiseVertHeightCurve2:HAS[#sigmaPlaceholder[1]] {}
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 11500
