--- a/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Kerbin.cfg
@@ -94,14 +94,21 @@
 					deformity = 5000
 					SigmaDimensions = 1
 				}
-				MapDecalTangent {}
-				MapDecalTangent {}
+				MapDecalTangent
+				{
+					sigmaPlaceholder = 1
+				}
+				MapDecalTangent
+				{
+					sigmaPlaceholder = 1
+				}
 				@MapDecalTangent,0
 				{
 					heightMapDeformity = 70
 					position = 157000,-3000,-570000
 					radius = 7500
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@MapDecalTangent,1
 				{
@@ -111,7 +118,9 @@
 					radius = 1200
 					smoothHeight = 0.2
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
+				!MapDecalTangent:HAS[#sigmaPlaceholder[1]] {}
 				%MapDecal
 				{
 					absoluteOffset = 400
