--- a/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Mun.cfg
@@ -50,8 +50,14 @@
 					deformity = 400
 					SigmaDimensions = 1
 				}
-				FlattenArea {}
-				FlattenArea {}
+				FlattenArea
+				{
+					sigmaPlaceholder = 1
+				}
+				FlattenArea
+				{
+					sigmaPlaceholder = 1
+				}
 				@FlattenArea,0
 				{
 					flattenTo = 4500.25
@@ -59,6 +65,7 @@
 					outerRadius = 1000
 					position = -6140,-200500,26747
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@FlattenArea,1
 				{
@@ -67,21 +74,32 @@
 					outerRadius = 1000
 					position = 106480,170340,17136
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
-				VoronoiCraters {}
-				VoronoiCraters {}
+				!FlattenArea:HAS[#sigmaPlaceholder[1]] {}
+				VoronoiCraters
+				{
+					sigmaPlaceholder = 1
+				}
+				VoronoiCraters
+				{
+					sigmaPlaceholder = 1
+				}
 				@VoronoiCraters,0
 				{
 					deformation = 500
 					jitterHeight = 3
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@VoronoiCraters,1
 				{
 					deformation = 200
 					jitterHeight = 2
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
+				!VoronoiCraters:HAS[#sigmaPlaceholder[1]] {}
 			}
 		}
 	}
