--- a/GameData/Sigma/Dimensions/Configs/Bodies/Pol.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Pol.cfg
@@ -25,18 +25,27 @@
 			deactivateAltitude = 180000
 			%Mods
 			{
-				VertexSimplexHeightAbsolute {}
-				VertexSimplexHeightAbsolute {}
+				VertexSimplexHeightAbsolute
+				{
+					sigmaPlaceholder = 1
+				}
+				VertexSimplexHeightAbsolute
+				{
+					sigmaPlaceholder = 1
+				}
 				@VertexSimplexHeightAbsolute,0
 				{
 					deformity = 3000
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@VertexSimplexHeightAbsolute,1
 				{
 					deformity = 800
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
+				!VertexSimplexHeightAbsolute:HAS[#sigmaPlaceholder[1]] {}
 				%VertexHeightNoise
 				{
 					deformity = 2600
