--- a/GameData/Sigma/Dimensions/Configs/Bodies/Vall.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Vall.cfg
@@ -25,35 +25,53 @@
 			deactivateAltitude = 330000
 			%Mods
 			{
-				VertexSimplexHeightAbsolute {}
-				VertexSimplexHeightAbsolute {}
+				VertexSimplexHeightAbsolute
+				{
+					sigmaPlaceholder = 1
+				}
+				VertexSimplexHeightAbsolute
+				{
+					sigmaPlaceholder = 1
+				}
 				@VertexSimplexHeightAbsolute,0
 				{
 					deformity = 3000
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@VertexSimplexHeightAbsolute,1
 				{
 					deformity = 100
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
+				!VertexSimplexHeightAbsolute:HAS[#sigmaPlaceholder[1]] {}
 				%VertexHeightNoise
 				{
 					deformity = 2000
 					SigmaDimensions = 1
 				}
-				VertexHeightMap {}
-				VertexHeightMap {}
+				VertexHeightMap
+				{
+					sigmaPlaceholder = 1
+				}
+				VertexHeightMap
+				{
+					sigmaPlaceholder = 1
+				}
 				@VertexHeightMap,0
 				{
 					deformity = 1000
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@VertexHeightMap,1
 				{
 					deformity = 2000
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
+				!VertexHeightMap:HAS[#sigmaPlaceholder[1]] {}
 				%AltitudeAlpha
 				{
 					atmosphereDepth = 8000
