--- a/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Bop.cfg
@@ -25,8 +25,14 @@
 			deactivateAltitude = 180000
 			%Mods
 			{
-				FlattenArea {}
-				FlattenArea {}
+				FlattenArea
+				{
+					sigmaPlaceholder = 1
+				}
+				FlattenArea
+				{
+					sigmaPlaceholder = 1
+				}
 				@FlattenArea,0
 				{
 					flattenTo = 2200
@@ -34,6 +40,7 @@
 					outerRadius = 15000
 					position = -19468.5,5737.089,61828.13
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@FlattenArea,1
 				{
@@ -42,7 +49,9 @@
 					outerRadius = 35000
 					position = 2000,5737.089,61828.13
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
+				!FlattenArea:HAS[#sigmaPlaceholder[1]] {}
 				%VertexSimplexHeightAbsolute
 				{
 					deformity = 24000
@@ -63,14 +72,21 @@
 					vHeightMax = 10000
 					SigmaDimensions = 1
 				}
-				MapDecal {}
-				MapDecal {}
+				MapDecal
+				{
+					sigmaPlaceholder = 1
+				}
+				MapDecal
+				{
+					sigmaPlaceholder = 1
+				}
 				@MapDecal,0
 				{
 					heightMapDeformity = 10
 					position = -19468.5,5737.089,61828.13
 					radius = 60000
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@MapDecal,1
 				{
@@ -78,7 +94,9 @@
 					position = 2000,5737.089,61828.13
 					radius = 20000
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
+				!MapDecal:HAS[#sigmaPlaceholder[1]] {}
 			}
 		}
 	}
