--- a/GameData/Sigma/Dimensions/Configs/Bodies/Eve.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Eve.cfg
@@ -53,18 +53,27 @@
 					atmosphereDepth = 10000
 					SigmaDimensions = 1
 				}
-				AerialPerspectiveMaterial {}
-				AerialPerspectiveMaterial {}
+				AerialPerspectiveMaterial
+				{
+					sigmaPlaceholder = 1
+				}
+				AerialPerspectiveMaterial
+				{
+					sigmaPlaceholder = 1
+				}
 				@AerialPerspectiveMaterial,0
 				{
 					atmosphereDepth = 150000
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
 				@AerialPerspectiveMaterial,1
 				{
 					atmosphereDepth = 5000
 					SigmaDimensions = 1
+					!sigmaPlaceholder = DEL
 				}
+				!AerialPerspectiveMaterial:HAS[#sigmaPlaceholder[1]] {}
 			}
 		}
 	}
