--- a/GameData/Sigma/Dimensions/Configs/General/scaledVersions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/scaledVersions.cfg
@@ -6,7 +6,7 @@
 		@ScaledVersion
 		{
 			%Material {}
-			Material:HAS[~texture[*]]
+			@Material:HAS[~texture[*]]
 			{
 				texture = BUILTIN/moho00
 			}
@@ -18,7 +18,7 @@
 		@ScaledVersion
 		{
 			%Material {}
-			Material:HAS[~texture[*]]
+			@Material:HAS[~texture[*]]
 			{
 				texture = BUILTIN/NewMunSurfaceMap00
 			}
@@ -30,7 +30,7 @@
 		@ScaledVersion
 		{
 			%Material {}
-			Material:HAS[~texture[*]]
+			@Material:HAS[~texture[*]]
 			{
 				texture = BUILTIN/gp1minormoon200
 			}
@@ -42,7 +42,7 @@
 		@ScaledVersion
 		{
 			%Material {}
-			Material:HAS[~texture[*]]
+			@Material:HAS[~texture[*]]
 			{
 				texture = BUILTIN/dwarfplanet100
 			}
@@ -54,7 +54,7 @@
 		@ScaledVersion
 		{
 			%Material {}
-			Material:HAS[~texture[*]]
+			@Material:HAS[~texture[*]]
 			{
 				texture = BUILTIN/rockyMoon00
 			}
@@ -66,7 +66,7 @@
 		@ScaledVersion
 		{
 			%Material {}
-			Material:HAS[~texture[*]]
+			@Material:HAS[~texture[*]]
 			{
 				texture = BUILTIN/gp1icemoon00
 			}
