height color fix

--- a/GameData/Sigma/Dimensions/Configs/General/scaledVersions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/scaledVersions.cfg
@@ -1,6 +1,6 @@
 @Kopernicus:FOR[SigDim]
 {
-	@Body[Moho]
+	@Body:HAS[@Template:HAS[#name[Moho]],!ScaledVersion:HAS[@Material:HAS[#texture[*]]]]
 	{
 		%ScaledVersion {}
 		@ScaledVersion
@@ -12,7 +12,7 @@
 			}
 		}
 	}
-	@Body[Minmus]
+	@Body:HAS[@Template:HAS[#name[Minmus]],!ScaledVersion:HAS[@Material:HAS[#texture[*]]]]
 	{
 		%ScaledVersion {}
 		@ScaledVersion
@@ -24,7 +24,7 @@
 			}
 		}
 	}
-	@Body[Pol]
+	@Body:HAS[@Template:HAS[#name[Pol]],!ScaledVersion:HAS[@Material:HAS[#texture[*]]]]
 	{
 		%ScaledVersion {}
 		@ScaledVersion
@@ -36,7 +36,7 @@
 			}
 		}
 	}
-	@Body[Dres]
+	@Body:HAS[@Template:HAS[#name[Dres]],!ScaledVersion:HAS[@Material:HAS[#texture[*]]]]
 	{
 		%ScaledVersion {}
 		@ScaledVersion
@@ -48,7 +48,7 @@
 			}
 		}
 	}
-	@Body[Tylo]
+	@Body:HAS[@Template:HAS[#name[Tylo]],!ScaledVersion:HAS[@Material:HAS[#texture[*]]]]
 	{
 		%ScaledVersion {}
 		@ScaledVersion
@@ -60,7 +60,7 @@
 			}
 		}
 	}
-	@Body[Vall]
+	@Body:HAS[@Template:HAS[#name[Vall]],!ScaledVersion:HAS[@Material:HAS[#texture[*]]]]
 	{
 		%ScaledVersion {}
 		@ScaledVersion
