--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -1,5 +1,7 @@
 // Check for missing variables
 
+%SigmaDimensions {}
+
 @SigmaDimensions:HAS[~Rescale[<1],~Rescale[>1]]:AFTER[SigDim]
 {
 	%Rescale = 1
@@ -27,6 +29,10 @@
 @SigmaDimensions:HAS[~RingsFromRadius[0],~RingsFromRadius[1]]:AFTER[SigDim]
 {
 	%RingsFromRadius = 0
+}
+@SigmaDimensions:HAS[~HeightColorFix[1]]:AFTER[SigDim]
+{
+	%HeightColorFix = 0
 }
 
 // Apply changes needed for advanced settings
