--- a/GameData/Sigma/Dimensions/Configs/ReDimension/scaledColorMaps.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/scaledColorMaps.cfg
@@ -11,16 +11,10 @@
 			%Mods
 			{
 				%HeightColorMap {}
-			}
-		}
-	}
-	@Body:HAS[@Template:HAS[#name[Minmus],~removeAllPQSMods[True],~removePQSMods[*HeightColorMap*]]]
-	{
-		%PQS
-		{
-			%Mods
-			{
-				%HeightColorMap {}
+				@HeightColorMap:HAS[~order[*]]
+				{
+					order = 201
+				}
 			}
 		}
 	}
@@ -31,6 +25,10 @@
 			%Mods
 			{
 				%HeightColorMap {}
+				@HeightColorMap:HAS[~order[*]]
+				{
+					order = 41
+				}
 			}
 		}
 	}
@@ -41,6 +39,10 @@
 			%Mods
 			{
 				%HeightColorMap {}
+				@HeightColorMap:HAS[~order[*]]
+				{
+					order = 201
+				}
 			}
 		}
 	}
@@ -51,6 +53,10 @@
 			%Mods
 			{
 				%HeightColorMap {}
+				@HeightColorMap:HAS[~order[*]]
+				{
+					order = 201
+				}
 			}
 		}
 	}
@@ -61,6 +67,10 @@
 			%Mods
 			{
 				%HeightColorMap {}
+				@HeightColorMap:HAS[~order[*]]
+				{
+					order = 500
+				}
 			}
 		}
 	}
