change ground scatter density

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -34,6 +34,14 @@
 						{
 							@alterApparentHeight *= #$@SigmaDimensions/Resize$
 							@alterRealHeight *= #$@SigmaDimensions/Resize$
+							@scatters,*
+							{
+								@Scatter:HAS[#density[>0]]
+								{
+									@density *= #$@SigmaDimensions/Resize$
+									@density *= #$@SigmaDimensions/Resize$
+								}
+							}
 						}
 					}
 				}
