resize ground textures

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -7,6 +7,44 @@
 			@fadeStart *= #$@SigmaDimensions/fadeResize$
 			@fadeEnd *= #$@SigmaDimensions/fadeResize$
 			@deactivateAltitude *= #$@SigmaDimensions/fadeResize$
+			@Material
+			{
+				@groundTexStart *= #$@SigmaDimensions/Resize$
+				@groundTexEnd *= #$@SigmaDimensions/Resize$
+				@steepTexStart *= #$@SigmaDimensions/Resize$
+				@steepTexEnd *= #$@SigmaDimensions/Resize$
+				@texTiling *= #$@SigmaDimensions/Resize$
+				@texTiling *= #$@SigmaDimensions/Resize$
+				@lowNearTiling *= #$@SigmaDimensions/Resize$
+				@lowNearTiling *= #$@SigmaDimensions/Resize$
+				@lowBumpNearTiling *= #$@SigmaDimensions/Resize$
+				@lowBumpNearTiling *= #$@SigmaDimensions/Resize$
+				@lowBumpFarTiling *= #$@SigmaDimensions/Resize$
+				@lowBumpFarTiling *= #$@SigmaDimensions/Resize$
+				@midNearTiling *= #$@SigmaDimensions/Resize$
+				@midNearTiling *= #$@SigmaDimensions/Resize$
+				@midBumpFarTiling *= #$@SigmaDimensions/Resize$
+				@midBumpFarTiling *= #$@SigmaDimensions/Resize$
+				@midBumpNearTiling *= #$@SigmaDimensions/Resize$
+				@midBumpNearTiling *= #$@SigmaDimensions/Resize$
+				@highNearTiling *= #$@SigmaDimensions/Resize$
+				@highNearTiling *= #$@SigmaDimensions/Resize$
+				@highBumpFarTiling *= #$@SigmaDimensions/Resize$
+				@highBumpFarTiling *= #$@SigmaDimensions/Resize$
+				@highBumpNearTiling *= #$@SigmaDimensions/Resize$
+				@highBumpNearTiling *= #$@SigmaDimensions/Resize$
+				@steepNearTiling *= #$@SigmaDimensions/Resize$
+				@steepNearTiling *= #$@SigmaDimensions/Resize$
+				@steepTiling *= #$@SigmaDimensions/Resize$
+				@steepTiling *= #$@SigmaDimensions/Resize$
+			}
+			@FallbackMaterial
+			{
+				@texTiling *= #$@SigmaDimensions/Resize$
+				@texTiling *= #$@SigmaDimensions/Resize$
+				@groundTexStart *= #$@SigmaDimensions/Resize$
+				@groundTexEnd *= #$@SigmaDimensions/Resize$
+			}
 			@Mods
 			{
 				@VertexSimplexHeightAbsolute,*
