scatter size - maybe

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -78,6 +78,10 @@
 								{
 									@density *= #$@SigmaDimensions/Resize$
 									@density *= #$@SigmaDimensions/Resize$
+									@maxLevelOffset *= #$@SigmaDimensions/Resize$
+									@maxScale *= #$@SigmaDimensions/Resize$
+									@minScale *= #$@SigmaDimensions/Resize$
+									@verticalOffset *= #$@SigmaDimensions/Resize$
 								}
 							}
 						}
