ground scatters and ground textures fix

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -13,35 +13,9 @@
 				@groundTexEnd *= #$@SigmaDimensions/Resize$
 				@steepTexStart *= #$@SigmaDimensions/Resize$
 				@steepTexEnd *= #$@SigmaDimensions/Resize$
-				@texTiling *= #$@SigmaDimensions/Resize$
-				@texTiling *= #$@SigmaDimensions/Resize$
-				@lowNearTiling *= #$@SigmaDimensions/Resize$
-				@lowNearTiling *= #$@SigmaDimensions/Resize$
-				@lowBumpNearTiling *= #$@SigmaDimensions/Resize$
-				@lowBumpNearTiling *= #$@SigmaDimensions/Resize$
-				@lowBumpFarTiling *= #$@SigmaDimensions/Resize$
-				@lowBumpFarTiling *= #$@SigmaDimensions/Resize$
-				@midNearTiling *= #$@SigmaDimensions/Resize$
-				@midNearTiling *= #$@SigmaDimensions/Resize$
-				@midBumpFarTiling *= #$@SigmaDimensions/Resize$
-				@midBumpFarTiling *= #$@SigmaDimensions/Resize$
-				@midBumpNearTiling *= #$@SigmaDimensions/Resize$
-				@midBumpNearTiling *= #$@SigmaDimensions/Resize$
-				@highNearTiling *= #$@SigmaDimensions/Resize$
-				@highNearTiling *= #$@SigmaDimensions/Resize$
-				@highBumpFarTiling *= #$@SigmaDimensions/Resize$
-				@highBumpFarTiling *= #$@SigmaDimensions/Resize$
-				@highBumpNearTiling *= #$@SigmaDimensions/Resize$
-				@highBumpNearTiling *= #$@SigmaDimensions/Resize$
-				@steepNearTiling *= #$@SigmaDimensions/Resize$
-				@steepNearTiling *= #$@SigmaDimensions/Resize$
-				@steepTiling *= #$@SigmaDimensions/Resize$
-				@steepTiling *= #$@SigmaDimensions/Resize$
 			}
 			@FallbackMaterial
 			{
-				@texTiling *= #$@SigmaDimensions/Resize$
-				@texTiling *= #$@SigmaDimensions/Resize$
 				@groundTexStart *= #$@SigmaDimensions/Resize$
 				@groundTexEnd *= #$@SigmaDimensions/Resize$
 			}
@@ -74,16 +48,22 @@
 							@alterRealHeight *= #$@SigmaDimensions/Resize$
 							@scatters,*
 							{
-								@Scatter:HAS[#density[>0]]
+								@Scatter,*
 								{
-									@density *= #$@SigmaDimensions/Resize$
-									@density *= #$@SigmaDimensions/Resize$
-									@maxLevelOffset *= #$@SigmaDimensions/Resize$
-									@maxScale *= #$@SigmaDimensions/Resize$
-									@minScale *= #$@SigmaDimensions/Resize$
-									@verticalOffset *= #$@SigmaDimensions/Resize$
+									@density /= #$@SigmaDimensions/changeScatterDensity$
+									@density /= #$@SigmaDimensions/changeScatterDensity$
 								}
 							}
+						}
+					}
+					@scatters,*
+					{
+						@Scatter,*
+						{
+							@maxLevelOffset *= #$@SigmaDimensions/changeScatterSize$
+							@maxScale *= #$@SigmaDimensions/changeScatterSize$
+							@minScale *= #$@SigmaDimensions/changeScatterSize$
+							@verticalOffset *= #$@SigmaDimensions/changeScatterSize$
 						}
 					}
 				}
