--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -34,6 +34,10 @@
 {
 	%HeightColorFix = 0
 }
+@SigmaDimensions:HAS[~resizeScatter[0]]:AFTER[SigDim]
+{
+	%resizeScatter = 1
+}
 
 // Apply changes needed for advanced settings
 
@@ -71,4 +75,15 @@
 @SigmaDimensions:HAS[#Resize[>1]]:AFTER[SigDim]
 {
 	// %fadeResize = #$Resize$
+}
+@SigmaDimensions:HAS[#resizeScatter[0]]:AFTER[SigDim]
+{
+	%changeScatterSize = 1
+	%changeScatterDensity = 1
+	@changeScatterDensity /= #$Resize$
+}
+@SigmaDimensions:HAS[#resizeScatter[1]]:AFTER[SigDim]
+{
+	%changeScatterSize = #$Resize$
+	%changeScatterDensity = #$Resize$
 }
