--- a/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -4,12 +4,14 @@
 }
 @Kopernicus:HAS[~SigmaDimensionsResize[1]]:AFTER[SigDim]
 {
+	!SigmaDimensionsResize = DEL
+	@Body:HAS[~cacheFile[*]]
+	{
+		cacheFile = #Kopernicus/Cache/$name$.bin
+	}
 	@Body,*
 	{
-		%cacheFile = #Sigma/Dimensions/Cache/$name$$@SigmaDimensions/Resize$.bin
+		@cacheFile = #Sigma/Dimensions/Cache/$cacheFile$§$@SigmaDimensions/Resize$x].bin
+		@cacheFile ^= :.bin§:[:
 	}
-}
-@Kopernicus:AFTER[SigDim]
-{
-	!SigmaDimensionsResize = DEL
 }
