--- a/GameData/Sigma/Dimensions/Configs/ReDimension/scaledColorMaps.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/scaledColorMaps.cfg
@@ -6,6 +6,14 @@
 {
 	@Body:HAS[@Template:HAS[#name[Moho],~removeAllPQSMods[True],~removePQSMods[*HeightColorMap*]]]
 	{
+		%ScaledVersion
+		{
+			%Material {}
+			@Material:HAS[~texture[*]]
+			{
+				texture = BUILTIN/moho00
+			}
+		}
 		%PQS
 		{
 			%Mods
@@ -20,6 +28,14 @@
 	}
 	@Body:HAS[@Template:HAS[#name[Pol],~removeAllPQSMods[True],~removePQSMods[*HeightColorMap*]]]
 	{
+		%ScaledVersion
+		{
+			%Material {}
+			@Material:HAS[~texture[*]]
+			{
+				texture = BUILTIN/gp1minormoon200
+			}
+		}
 		%PQS
 		{
 			%Mods
@@ -34,6 +50,14 @@
 	}
 	@Body:HAS[@Template:HAS[#name[Dres],~removeAllPQSMods[True],~removePQSMods[*HeightColorMap*]]]
 	{
+		%ScaledVersion
+		{
+			%Material {}
+			@Material:HAS[~texture[*]]
+			{
+				texture = BUILTIN/dwarfplanet100
+			}
+		}
 		%PQS
 		{
 			%Mods
@@ -48,6 +72,14 @@
 	}
 	@Body:HAS[@Template:HAS[#name[Tylo],~removeAllPQSMods[True],~removePQSMods[*HeightColorMap*]]]
 	{
+		%ScaledVersion
+		{
+			%Material {}
+			@Material:HAS[~texture[*]]
+			{
+				texture = BUILTIN/rockyMoon00
+			}
+		}
 		%PQS
 		{
 			%Mods
@@ -62,6 +94,14 @@
 	}
 	@Body:HAS[@Template:HAS[#name[Vall],~removeAllPQSMods[True],~removePQSMods[*HeightColorMap*]]]
 	{
+		%ScaledVersion
+		{
+			%Material {}
+			@Material:HAS[~texture[*]]
+			{
+				texture = BUILTIN/gp1icemoon00
+			}
+		}
 		%PQS
 		{
 			%Mods
