--- a/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/advancedSettings.cfg
@@ -79,11 +79,20 @@
 @SigmaDimensions:HAS[#resizeScatter[0]]:AFTER[SigDim]
 {
 	%changeScatterSize = 1
-	%changeScatterDensity = 1
-	@changeScatterDensity /= #$Resize$
+	%changeScatterDensity = #$Resize$
+}
+@SigmaDimensions:HAS[#resizeScatter[0],#Resize[>1]]:AFTER[SigDim]
+{
+	@changeScatterDensity != 2
+}
+@SigmaDimensions:HAS[#resizeScatter[0],#Resize[<1]]:AFTER[SigDim]
+{
+	@changeScatterDensity *= 0.5
+	@changeScatterDensity += 0.5
 }
 @SigmaDimensions:HAS[#resizeScatter[1]]:AFTER[SigDim]
 {
 	%changeScatterSize = #$Resize$
 	%changeScatterDensity = #$Resize$
+	@changeScatterDensity != -2
 }
