--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -46,14 +46,6 @@
 						{
 							@alterApparentHeight *= #$@SigmaDimensions/Resize$
 							@alterRealHeight *= #$@SigmaDimensions/Resize$
-							@scatters,*
-							{
-								@Scatter,*
-								{
-									@density /= #$@SigmaDimensions/changeScatterDensity$
-									@density /= #$@SigmaDimensions/changeScatterDensity$
-								}
-							}
 						}
 					}
 					@scatters,*
@@ -64,6 +56,7 @@
 							@maxScale *= #$@SigmaDimensions/changeScatterSize$
 							@minScale *= #$@SigmaDimensions/changeScatterSize$
 							@verticalOffset *= #$@SigmaDimensions/changeScatterSize$
+							@densityFactor *= #$@SigmaDimensions/changeScatterDensity$
 						}
 					}
 				}
