--- a/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -4,14 +4,17 @@
 }
 @Kopernicus:HAS[~SigmaDimensionsResize[1]]:AFTER[SigDim]
 {
-	!SigmaDimensionsResize = DEL
 	@Body:HAS[~cacheFile[*]]
 	{
 		cacheFile = #Kopernicus/Cache/$name$.bin
 	}
 	@Body,*
 	{
-		@cacheFile = #Sigma/Dimensions/Cache/$cacheFile$§$@SigmaDimensions/Resize$x].bin
-		@cacheFile ^= :.bin§:[:
+		@cacheFile = #Sigma/Dimensions/Cache/$cacheFile$Â§$@SigmaDimensions/Resize$x].bin
+		@cacheFile ^= :.binÂ§:[:
 	}
+}
+@Kopernicus:AFTER[SigDim]
+{
+	!SigmaDimensionsResize = DEL
 }
