--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -27,6 +27,11 @@
 				@transformScale[*] /= #$../../Properties/radius$
 				@transformScale[*] /= #$@SigmaDimensions/Resize$
 			}
+			@AtmosphereFromGround:HAS[~sunAtmo[True]]
+			{
+				!sunAtmo = DEL
+				@transformScale = 0,0,0
+			}
 		
 			// pressureCurve
 			
