--- a/GameData/Sigma/Dimensions/Configs/Bodies/Sun_atmo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Sun_atmo.cfg
@@ -32,6 +32,10 @@
 				key = 500000 6000 0.001352723 0.001352723
 				key = 600000 10000 0.06371323 0
 			}
+			%AtmosphereFromGround
+			{
+				sunAtmo = True
+			}
 		}
 	}
 }
