atmosphere case sensitivity

--- a/GameData/Sigma/Dimensions/Configs/General/caseSensitivityFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/caseSensitivityFix.cfg
@@ -8,7 +8,7 @@
 		@finalizeOrbit ^= :E:e:
 		@Template
 		{
-			@removeAllPQSMods ^= :t:T:
+			@temperatureCurveIsNormalized ^= :t:T:
 			@removeAllPQSMods ^= :R:r:
 			@removeAllPQSMods ^= :U:u:
 			@removeAllPQSMods ^= :E:e:
@@ -24,6 +24,18 @@
 			@tidallyLocked ^= :R:r:
 			@tidallyLocked ^= :U:u:
 			@tidallyLocked ^= :E:e:
+		}
+		@Atmosphere
+		{
+			@pressureCurveIsNormalized ^= :t:T:
+			@pressureCurveIsNormalized ^= :R:r:
+			@pressureCurveIsNormalized ^= :U:u:
+			@pressureCurveIsNormalized ^= :E:e:
+
+			@temperatureCurveIsNormalized ^= :t:T:
+			@temperatureCurveIsNormalized ^= :R:r:
+			@temperatureCurveIsNormalized ^= :U:u:
+			@temperatureCurveIsNormalized ^= :E:e:
 		}
 	}
 }
