normalized curves fix

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -32,25 +32,31 @@
 				!sunAtmo = DEL
 				@transformScale = 0,0,0
 			}
-		
+		}	
+		@Atmosphere:HAS[~pressureCurveIsNormalized[True]]
+		{
 			// pressureCurve
-			
+		
 			@pressureCurve
 			{
 				@key,*[0, ] *= #$@SigmaDimensions/Atmosphere$
 				@key,*[2, ] /= #$@SigmaDimensions/Atmosphere$
 				@key,*[3, ] /= #$@SigmaDimensions/Atmosphere$
 			}
-			
+		}
+		@Atmosphere:HAS[~temperatureCurveIsNormalized[True]]
+		{
 			// temperatureCurve
-			
+		
 			@temperatureCurve
 			{
 				@key,*[0, ] *= #$@SigmaDimensions/Atmosphere$
 				@key,*[2, ] /= #$@SigmaDimensions/Atmosphere$
 				@key,*[3, ] /= #$@SigmaDimensions/Atmosphere$
 			}
-
+		}
+		@Atmosphere
+		{
 			// temperatureSunMultCurve
 			
 			@temperatureSunMultCurve
