--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -36,23 +36,39 @@
 		@Atmosphere:HAS[~pressureCurveIsNormalized[True]]
 		{
 			// pressureCurve
-		
+			
 			@pressureCurve
 			{
-				@key,*[0, ] *= #$@SigmaDimensions/Atmosphere$
-				@key,*[2, ] /= #$@SigmaDimensions/Atmosphere$
-				@key,*[3, ] /= #$@SigmaDimensions/Atmosphere$
+				@key,* ^= : :,:
+				@key,*[0] *= #$@SigmaDimensions/Atmosphere$
+			}
+			@pressureCurve:HAS[#key[*,*,*,*]]
+			{
+				@key,*[2] /= #$@SigmaDimensions/Atmosphere$
+				@key,*[3] /= #$@SigmaDimensions/Atmosphere$
+			}
+			@pressureCurve
+			{
+				@key,* ^= :,: :
 			}
 		}
 		@Atmosphere:HAS[~temperatureCurveIsNormalized[True]]
 		{
 			// temperatureCurve
-		
+			
 			@temperatureCurve
 			{
-				@key,*[0, ] *= #$@SigmaDimensions/Atmosphere$
-				@key,*[2, ] /= #$@SigmaDimensions/Atmosphere$
-				@key,*[3, ] /= #$@SigmaDimensions/Atmosphere$
+				@key,* ^= : :,:
+				@key,*[0] *= #$@SigmaDimensions/Atmosphere$
+			}
+			@temperatureCurve:HAS[#key[*,*,*,*]]
+			{
+				@key,*[2] /= #$@SigmaDimensions/Atmosphere$
+				@key,*[3] /= #$@SigmaDimensions/Atmosphere$
+			}
+			@temperatureCurve
+			{
+				@key,* ^= :,: :
 			}
 		}
 		@Atmosphere
@@ -61,9 +77,17 @@
 			
 			@temperatureSunMultCurve
 			{
-				@key,*[0, ] *= #$@SigmaDimensions/Atmosphere$
-				@key,*[2, ] /= #$@SigmaDimensions/Atmosphere$
-				@key,*[3, ] /= #$@SigmaDimensions/Atmosphere$
+				@key,* ^= : :,:
+				@key,*[0] *= #$@SigmaDimensions/Atmosphere$
+			}
+			@temperatureSunMultCurve:HAS[#key[*,*,*,*]]
+			{
+				@key,*[2] /= #$@SigmaDimensions/Atmosphere$
+				@key,*[3] /= #$@SigmaDimensions/Atmosphere$
+			}
+			@temperatureSunMultCurve
+			{
+				@key,* ^= :,: :
 			}
 		}
 	}
