--- a/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/atmoScale.cfg
@@ -7,7 +7,11 @@
 			@maxAltitude *= #$@SigmaDimensions/Atmosphere$
 			@altitude *= #$@SigmaDimensions/Atmosphere$
 			@atmosphereDepth *= #$@SigmaDimensions/Atmosphere$
-			@AtmosphereFromGround
+			@AtmosphereFromGround:HAS[~innerRadius[*]]
+			{
+				innerRadius = 0
+			}
+			@AtmosphereFromGround:HAS[~sunAtmo[True]]
 			{
 				@outerRadius -= #$innerRadius$
 				@outerRadius *= #$@SigmaDimensions/Atmosphere$
@@ -20,17 +24,17 @@
 			{
 				@transformScale = 6000
 			}
-			@AtmosphereFromGround
+			@AtmosphereFromGround:HAS[~sunAtmo[True]]
 			{
 				@transformScale += #$innerRadius$
 				@transformScale = #$transformScale$,$transformScale$,$transformScale$
 				@transformScale[*] /= #$../../Properties/radius$
 				@transformScale[*] /= #$@SigmaDimensions/Resize$
 			}
-			@AtmosphereFromGround:HAS[~sunAtmo[True]]
+			@AtmosphereFromGround:HAS[#sunAtmo[True]]
 			{
 				!sunAtmo = DEL
-				@transformScale = 0,0,0
+				%transformScale = 0,0,0
 			}
 		}	
 		@Atmosphere:HAS[~pressureCurveIsNormalized[True]]
