--- a/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/massFix.cfg
@@ -3,6 +3,18 @@
 
 // This part calculates the mass of the body if it's not already defined
 
+	// mass from gravParameter
+
+	@Body:HAS[@Properties:HAS[#gravParameter[*]]]
+	{
+		@Properties
+		{
+			%mass = #$gravParameter$
+			@mass /= 6.674e-11
+			!gravParameter = DEL
+		}
+	}
+
 	// mass from geeASL + radius
 
 	@Body:HAS[@Properties:HAS[#geeASL[*],~mass[]]]
@@ -14,18 +26,6 @@
 			@mass *= #$geeASL$
 			@mass /= 6.674e-11
 			@mass *= 9.81
-		}
-	}
-
-	// mass from gravParameter
-
-	@Body:HAS[@Properties:HAS[#gravParameter[*]]]
-	{
-		@Properties
-		{
-			mass = #$gravParameter$
-			@mass /= 6.674e-11
-			!gravParameter = DEL
 		}
 	}
 
