--- a/GameData/Sigma/Dimensions/Configs/Bodies/Laythe_atmo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Laythe_atmo.cfg
@@ -2,6 +2,19 @@
 {
 	@Body:HAS[@Template:HAS[#name[Laythe]],!Template:HAS[#removeAtmosphere[True]]]
 	{
+		laytheAtmo = True
+	}
+	@Body:HAS[@Template:HAS[#removeAtmosphere[True]],@Atmosphere]
+	{
+		laytheAtmo = True
+	}
+	@Body:HAS[!Template,@Atmosphere]
+	{
+		laytheAtmo = True
+	}
+	@Body:HAS[#laytheAtmo[True]]
+	{
+		!laytheAtmo = DEL
 		%Atmosphere
 		{
 			maxAltitude = 50000
