--- a/GameData/Sigma/Dimensions/Configs/Bodies/Jool_atmo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Jool_atmo.cfg
@@ -2,12 +2,13 @@
 {
 	@Body:HAS[@Template:HAS[#name[Jool]],!Template:HAS[#removeAtmosphere[True]]]
 	{
-		%Atmosphere
+		%Atmosphere {}
+		@Atmosphere:HAS[~maxAltitude[*]]
 		{
 			maxAltitude = 200000
-			altitude = 200000
-			atmosphereDepth = 200000
-			
+		}
+		@Atmosphere
+		{
 			%pressureCurve {}
 			%temperatureCurve {}
 			%temperatureSunMultCurve {}
