--- a/GameData/Sigma/Dimensions/Configs/Bodies/Laythe_atmo.cfg
+++ b/GameData/Sigma/Dimensions/Configs/Bodies/Laythe_atmo.cfg
@@ -2,25 +2,13 @@
 {
 	@Body:HAS[@Template:HAS[#name[Laythe]],!Template:HAS[#removeAtmosphere[True]]]
 	{
-		laytheAtmo = True
-	}
-	@Body:HAS[@Template:HAS[#removeAtmosphere[True]],@Atmosphere]
-	{
-		laytheAtmo = True
-	}
-	@Body:HAS[!Template,@Atmosphere]
-	{
-		laytheAtmo = True
-	}
-	@Body:HAS[#laytheAtmo[True]]
-	{
-		!laytheAtmo = DEL
-		%Atmosphere
+		%Atmosphere {}
+		@Atmosphere:HAS[~maxAltitude[*]]
 		{
 			maxAltitude = 50000
-			altitude = 50000
-			atmosphereDepth = 50000
-			
+		}
+		@Atmosphere
+		{
 			%pressureCurve {}
 			%temperatureCurve {}
 			%temperatureSunMultCurve {}
