--- a/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/ResizePQSMods.cfg
@@ -212,6 +212,12 @@
 					@heightEnd *= #$@SigmaDimensions/Resize$
 					@heightStart *= #$@SigmaDimensions/Resize$
 				}
+				@VertexRidgedAltitudeCurve,*
+				{
+					@deformity *= #$@SigmaDimensions/Resize$
+					@simplexHeightStart *= #$@SigmaDimensions/Resize$
+					@simplexHeightEnd *= #$@SigmaDimensions/Resize$
+				}
 			}
 		}
 	}
