--- a/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/newCacheFiles.cfg
@@ -1,4 +1,4 @@
-@Kopernicus:AFTER[SigDim]
+﻿@Kopernicus:AFTER[SigDim]
 {
 	%SigmaDimensionsResize = #$@SigmaDimensions/Resize$
 }
@@ -10,7 +10,7 @@
 	}
 	@Body,*
 	{
-		@cacheFile = #Sigma/Dimensions/Cache/$cacheFile$§$@SigmaDimensions/Resize$x].bin
+		@cacheFile = #Sigma/Dimensions/Cache/.bin§$@SigmaDimensions/Resize$x]/$cacheFile$§$@SigmaDimensions/Resize$x].bin
 		@cacheFile ^= :.bin§:[:
 	}
 }
