couple of fixes

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -69,7 +69,7 @@
 			@repositionRadiusOffset -= 22.3
 			@absoluteOffset *= #$Resize$
 		}
-		@SpaceCenter:HAS[#Resize[<0.75]]
+		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.01]]
 		{
 			@Resize = 0.75
 		}
