fix KSC and add KSCSwitcher

--- a/GameData/Sigma/Dimensions/Configs/General/removeDuplicates.cfg
+++ b/GameData/Sigma/Dimensions/Configs/General/removeDuplicates.cfg
@@ -61,5 +61,17 @@
 			deactivateAltitude = #$deactivateAltitudeTEMP$
 			!deactivateAltitudeTEMP = DEL
 		}
+		@SpaceCenter
+		{
+			%heightMapDeformityTEMP = #$heightMapDeformity$
+			!heightMapDeformity,* = DEL
+			heightMapDeformity = #$heightMapDeformityTEMP$
+			!heightMapDeformityTEMP = DEL
+			
+			%absoluteOffsetTEMP = #$absoluteOffset$
+			!absoluteOffset,* = DEL
+			absoluteOffset = #$absoluteOffsetTEMP$
+			!absoluteOffsetTEMP = DEL
+		}
 	}
 }
