--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -64,10 +64,17 @@
 		{
 			%Resize = #$@SigmaDimensions/Resize$
 			@heightMapDeformity *= #$Resize$
-			@repositionRadiusOffset += 22.3
-			@repositionRadiusOffset *= #$Resize$
-			@repositionRadiusOffset -= 22.3
 			@absoluteOffset *= #$Resize$
+			%repositionRadiusOffset = 0
+		}
+		@SpaceCenter:HAS[#heightMapDeformity[>0]]
+		{
+			%repositionRadiusOffset = #$heightMapDeformity$
+			@repositionRadiusOffset *= 0.9275
+		}
+		@SpaceCenter:HAS[#absoluteOffset[>0]]
+		{
+			@repositionRadiusOffset += #$absoluteOffset$
 		}
 		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.01]]
 		{
@@ -75,6 +82,7 @@
 		}
 		@SpaceCenter
 		{
+			@repositionRadiusOffset -= 22.3
 			@radius *= #$Resize$
 		}
 	}
