couple of fixes

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/KSCSwitcher.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/KSCSwitcher.cfg
@@ -7,9 +7,9 @@
 			@PQSMod_MapDecalTangent
 			{
 				@radius *= #$@SigmaDimensions/Resize$
+				@heightMapDeformity *= 0.9294
 				@absoluteOffset += #$heightMapDeformity$
 				@absoluteOffset *= #$@SigmaDimensions/Resize$
-				@absoluteOffset *= 0.9294
 				@heightMapDeformity = 0
 			}
 			@PQSCity
