--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -63,18 +63,12 @@
 		@SpaceCenter
 		{
 			%Resize = #$@SigmaDimensions/Resize$
-			@heightMapDeformity *= #$Resize$
-			@absoluteOffset *= #$Resize$
-			%repositionRadiusOffset = 0
-		}
-		@SpaceCenter:HAS[#heightMapDeformity[>0]]
-		{
-			%repositionRadiusOffset = #$heightMapDeformity$
-			@repositionRadiusOffset *= 0.9275
-		}
-		@SpaceCenter:HAS[#absoluteOffset[>0]]
-		{
-			@repositionRadiusOffset += #$absoluteOffset$
+			@heightMapDeformity *= 0.9294
+			@absoluteOffset += #$heightMapDeformity$
+			@absoluteOffset *= #$@SigmaDimensions/Resize$
+			@heightMapDeformity = 0
+			%repositionRadiusOffset = #$absoluteOffset$
+			@repositionRadiusOffset -= 22.3
 		}
 		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.01]]
 		{
@@ -82,7 +76,6 @@
 		}
 		@SpaceCenter
 		{
-			@repositionRadiusOffset -= 22.3
 			@radius *= #$Resize$
 		}
 	}
