--- a/GameData/Sigma/Dimensions/Configs/ReDimension/KSCSwitcher.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/KSCSwitcher.cfg
@@ -6,11 +6,19 @@
 		{
 			@PQSMod_MapDecalTangent
 			{
-				@radius *= #$@SigmaDimensions/Resize$
-				@heightMapDeformity *= 0.9294
+				%Resize = #$@SigmaDimensions/Resize$
+				@heightMapDeformity *= 0.9255
 				@absoluteOffset += #$heightMapDeformity$
-				@absoluteOffset *= #$@SigmaDimensions/Resize$
+				@absoluteOffset *= #$Resize$
 				@heightMapDeformity = 0
+			}
+			@PQSMod_MapDecalTangent:HAS[#Resize[<0.75],#Resize[>0.009]]
+			{
+				@Resize = 0.75
+			}
+			@PQSMod_MapDecalTangent
+			{
+				@radius *= #$Resize$
 			}
 			@PQSCity
 			{
