--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setDimensions.cfg
@@ -63,14 +63,14 @@
 		@SpaceCenter
 		{
 			%Resize = #$@SigmaDimensions/Resize$
-			@heightMapDeformity *= 0.9294
+			@heightMapDeformity *= 0.9255
 			@absoluteOffset += #$heightMapDeformity$
 			@absoluteOffset *= #$@SigmaDimensions/Resize$
 			@heightMapDeformity = 0
 			%repositionRadiusOffset = #$absoluteOffset$
 			@repositionRadiusOffset -= 22.3
 		}
-		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.01]]
+		@SpaceCenter:HAS[#Resize[<0.75],#Resize[>0.009]]
 		{
 			@Resize = 0.75
 		}
@@ -90,11 +90,11 @@
 					%Resize = #$@SigmaDimensions/Resize$
 					@radius /= #$Resize$
 				}
-				@MapDecalTangent:HAS[#Resize[<0.75],#Resize[>0.01]]
+				@MapDecalTangent:HAS[#Resize[<0.75],#Resize[>0.009]]
 				{
 					@Resize = 0.75
 				}
-				@MapDecalTangent:HAS[#Resize[*]]
+				@MapDecalTangent
 				{
 					@radius *= #$Resize$
 				}
