don't add levels to stars and gas giants

--- a/GameData/Sigma/Dimensions/Configs/ReDimension/setPQSlevels.cfg
+++ b/GameData/Sigma/Dimensions/Configs/ReDimension/setPQSlevels.cfg
@@ -1,8 +1,8 @@
 @Kopernicus:AFTER[SigDim]
 {
-	@Body:HAS[@Properties:HAS[#radius[<5000]]]
+	@Body:HAS[@PQS,@Properties:HAS[#radius[<5000]]]
 	{
-		%PQS
+		@PQS
 		{
 			%minLevel = 1
 			%maxLevel = 2
